2009-01-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* HandlerFactoryConfiguration.cs: Allow handlers with non-public
	.ctors. Fixes bug #463971 for 1.0 profile.

2008-10-13  Marek Habersack  <mhabersack@novell.com>

	* HandlerFactoryConfiguration.cs: do not store call-specific data
	in a class field.

2008-10-12  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpRuntimeConfig.cs: Added support for several undocumented options,
	and removed support for options that are not supported or 2.0 only.
	* HttpRuntimeConfigurationHandler.cs: Added support for several
	undocumented options, and removed support for options that are not
	support or 2.0 only.

2008-08-20  Marek Habersack  <mhabersack@novell.com>

	* HttpRuntimeConfig.cs: implemented the undocumented (but
	supported in .NET 1.1) option EnableHeaderChecking to support fix
	for bug #418620

2008-06-30  Marek Habersack  <mhabersack@novell.com>

	* MachineKeyRegistryStorage.cs: hush the warnings

2008-06-18  Juraj Skripsky  <js@hotfeet.ch>

	* HttpRuntimeConfig.cs: Correct name of property "RequireRootedSaveAsPath".
	* HttpRuntimeConfigurationHandler.cs (Create): Read
	"requireRootedSaveAsPath", "idleTimeout", "enable" and
	"enableVersionHeader" from XmlNode.

2008-04-29  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationSettings.cs: if path mapping fails in
	GetConfigFromFileName, fall back to the application's physical
	directory.

2008-03-23  Dean Brettle <dean@brettle.com>

	* HttpCapabilitiesBase.cs (GetConfigCapabilities): changed to use
	browscap.ini for default capabilities when *.browser files are
	present, so we don't need to maintain browser capabilities in two
	places.

2008-03-09  Dean Brettle <dean@brettle.com> 

	* HttpCapabilitiesBase.cs: changed to use nBrowser for *.browser 
	support.  Also added internal GetConfigCapabilities_called
	flag used by ControlAdapterTest.ConfigCapabilitiesNotCalled() to 
	test that GetConfigCapabilities() is not called during normal page