@@ -1,3 +1,8 @@
+2009-05-14  Marek Habersack  <mhabersack@novell.com>
+
+	* HttpHandlersSection.cs: if we're matching a default handler,
+	disallow caching.
+
 2009-04-03  Marek Habersack  <mhabersack@novell.com>
 
 	* WebConfigurationManager.cs: added code in the static constructor
